syntax = "proto2";

package main;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message BananaTuple {
    option (gogoproto.description) = true;
    optional int64 BananaTime = 1;
    optional string Pulpy = 2;
    optional bool IsPulpySet = 3;
    optional string Yummy = 4;
    optional bool IsYummySet = 5;
    optional string Chewy = 6;
    optional bool IsChewySet = 7;
    optional string Squishy = 8;
    optional bool IsSquishySet = 9;
    optional string Brown = 10;
    optional bool IsBrownSet = 11;
    optional uint32 Rotten = 12;
    optional bool IsRottenSet = 13;
    optional uint32 Peel = 14;
    optional bool IsPeelSet = 15;
    optional PeelType PeelType = 16;
    optional bool IsPeelTypeSet = 17;
    optional BananaSource BananaSource = 18;
    optional bool Slippery = 19;
}

enum BananaSource {
    BananaSource_q = 0;
    BananaSource_w = 1;
    BananaSource_e = 2;
    BananaSource_r = 3;
    BananaSource_t = 4;
    BananaSource_y = 5;
    BananaSource_u = 6;
    BananaSource_i = 7;
    BananaSource_o = 8;
    BananaSource_p = 9;
    BananaSource_a = 10;
    BananaSource_s = 11;
    BananaSource_d = 12;
    BananaSource_f = 13;
    BananaSource_g = 14;
    BananaSource_h = 15;
    BananaSource_j = 16;
    BananaSource_k = 17;
    BananaSource_l = 18;
    BananaSource_z = 19;
    BananaSource_x = 20;
    BananaSource_c = 21;
    BananaSource_v = 22;
    BananaSource_b = 23;
    BananaSource_n = 24;
    BananaSourceMaximum = 25;
}

enum PeelType {
    PeelFirm = 0;
    PeelGreen = 1;
    PeelYellow = 2;
    PeelDarkened = 3;
    PeelDecomposing = 4;
}
