syntax = "proto2";

package main;

option go_package = "github.com/katydid/testsuite/validator/gen-validator-tests/main";

message SrcTree {
  optional string PackageName = 1;
  repeated SrcTree Imports = 2;
}
