//Thank you to http://creativitygames.net/random-word-generator/randomwords/2 for helping me to anonymise this data.

syntax = "proto2";

package main;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.populate_all) = true;
option (gogoproto.gostring_all) = true;

message TypewriterPrison {
	option (gogoproto.description) = true;
    optional bytes WineMessenger = 1;
    optional bytes ShoelaceBeer = 2;
    optional PocketRoses PocketRoses = 3;
}

message PocketRoses {
	option (gogoproto.description) = true;
    optional string ScarBusStop = 1;
    optional int64 BadgeShopping = 2;
    optional int64 DaisySled = 3;
    optional int64 SubmarineSaw = 4;
    optional bool SmileLetter = 5;
    optional BullySunrise IconHope = 6;
    optional HopeArch VanPurse = 7;
    repeated string MenuPaperclip = 8;
    repeated string BeetlePoker = 9;
    repeated string WigPride = 10;
    optional DivorceFair DivorceFair = 11;
    repeated fixed32 FlightParachute = 12;
    repeated fixed32 BeerRace = 13;
    repeated bytes LoftQuarry = 14;
    repeated bytes TaxiDivorce = 15;
    repeated fixed32 ElectionButter = 16;
    repeated bytes BriefcaseBaboon = 17;
    optional string MapShark = 18;
    optional bool NetInterlude = 19;
}


enum DivorceFair {
    Lawyer = 4;
    OldMan = 5;
    Help = 6;
    Radar = 9;
    Arm = 10;
    Verse = 11;
    Nuts = 15;
    Briefcase = 21;
    Palace = 22;
}

enum HopeArch {
	Mind = 0;
	Kennel = 1;
	Corn = 2;
	Silence = 3;
	Lobster = 4;
	Oven = 5;
	Nose = 6;
	Navel = 7;
	Pill = 8;
	Holly = 9;
	Doctrine = 10;
	Fork = 11;
	Belt = 12;
	Cult = 13;
	Tusk = 14;
	Chips = 15;
	Tent = 16;
	Coat = 17;
	Court = 18;
	Runaway = 19;
	Mulberry = 20;
	Politician = 21;
	Message = 22;
	Teacher = 23;
	Lift = 24;
	Danger = 25;
	Order = 26;
	Title = 27;
	Wheelbarrow = 28;
	Hosepipe = 29;
	Carpenter = 30;
	Shop = 31;
	Nile = 32;
	Cloud = 33;
	Mill = 34;
	Wallet = 35;
	Sugar = 36;
	Crisis = 37;
	Duty = 38;
	Milkshake = 39;
	Tap = 40;
	Clay = 41;
	Coronet = 42;
	Breakfast = 43;
	File = 44;
	Bulldozer = 45;
	Mattress = 46;
	Minute = 47;
	Chisel = 48;
	Aspirin = 49;
	Roulette = 50;
	Ham = 51;
	Bench = 52;
	Miner = 53;
 }

enum BullySunrise {
	Sandals = 0;
	Showcase = 1;
	Florist = 2;
	Fridge = 3;
	Tram = 4;
	Porch = 5;
	Skylight = 6;
	Joke = 7;
	Leather = 8;
	Crane = 9;
	Tour = 10;
}